[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/ui/menu/MainMenu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.08, 0.06, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleSection"]
layout_mode = 2
text = "EMBERS OF THE EARTH"
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer/TitleSection"]
layout_mode = 2
text = "A Post-Apocalyptic Steampunk Farming RPG"
horizontal_alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer/MainButtons"]
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer/MainButtons"]
layout_mode = 2
text = "Load Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer/MainButtons"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer/MainButtons"]
layout_mode = 2
text = "Quit"

[node name="SaveSlots" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveSlotLabel" type="Label" parent="VBoxContainer/SaveSlots"]
layout_mode = 2
text = "Save Slots:"

[node name="SaveSlotList" type="ItemList" parent="VBoxContainer/SaveSlots"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Version 0.1.0 - Alpha Build"
horizontal_alignment = 1

